modified:   config.properties modified:   src/client/Client.java modified:   src/client/controller/ClientController.java modified:   src/client/controller/MessageController.java modified:   src/client/model/ActivityTracker.java modified:   src/client/model/ConnectionManager.java modified:   src/client/model/MessageListener.java modified:   src/client/view/ChatView.java modified:   src/client/view/ChatWindowView.java modified:   src/client/view/LoginView.java modified:   src/client/view/UserListView.java modified:   src/common/util/ConfigLoader.java modified:   src/common/util/MessageFormatter.java